# ceiling_perception

./: .gitignore  README.md
ceiling_perception/: CMakeLists.txt  Readme.md  package.xml
ceiling_perception/config/: ceiling_perception_params.yaml
ceiling_perception/include/ceiling_perception/: array_parser.h  ceiling_perception.h  overhead_camera_manager.h
ceiling_perception/launch/: ceiling_perception_launch.py
ceiling_perception/src/: array_parser.cpp  ceiling_perception.cpp  main.cpp  overhead_camera_manager.cpp
ceiling_segmentation/: package.xml  requirements.txt  setup.cfg  setup.py
ceiling_segmentation/ceiling_segmentation/: main.py
ceiling_segmentation/ceiling_segmentation/DenseNet/: readme.md
ceiling_segmentation/ceiling_segmentation/DenseNet/models/: FC_DenseNet.py  TD_block.py  TU_block.py  decoder.py  dense_block.py  encoder.py  layer.py
ceiling_segmentation/ceiling_segmentation/DenseNet/utils/: main.py  predict.py
ceiling_segmentation/ceiling_segmentation/UNET/: readme.md
ceiling_segmentation/ceiling_segmentation/UNET/VGG16/: Decoder.py  Encoder.py  EncoderDecoder.py  VGGBlk.py  VGGBlkWithBN.py  vgg16_inference.py  vgg16_train.py
ceiling_segmentation/ceiling_segmentation/utils/: LoadData.py
ceiling_segmentation/config/: ceiling_segmentation_params.yaml
ceiling_segmentation/launch/: ceiling_segmentation.launch.py  ceiling_segmentation_launch.py
